# claude-draws

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile.worker  build_gallery.py  migrate_r2_to_d1.py  pyproject.toml
backend/baml_src/: artwork_metadata.baml  autogenerated_prompt.baml
backend/claudedraw/: autogenerated_template.md  cli.py  kidpix_instructions.md  reddit_request_template.md  user_submission_template.md
backend/worker/: main.py
backend/workflows/: activities.py  check_submissions.py  create_artwork.py  obs_client.py  process_video.py
baml_src/: artwork_metadata.baml  autogenerated_prompt.baml  clients.baml
claudedraw/: __init__.py  autogenerated_template.md  browser.py  cli.py  kidpix_instructions.md  reddit_prompt.md
docs/: gallery-architecture.md  r2-setup.md
gallery/: .dev.vars.example  .gitignore  package-lock.json  package.json  svelte.config.js  wrangler.toml
gallery/migrations/: 0001_create_submissions.sql  0002_create_artworks.sql  0003_add_upvotes.sql  README.md
gallery/src/: app.css  app.d.ts
gallery/src/lib/: gallery-metadata.backup.json
gallery/src/lib/components/: ArtworkCard.svelte  Footer.svelte  Header.svelte  QueuePreview.svelte  TabContainer.svelte  VideoPlayer.svelte
gallery/src/lib/utils/: clipboard.ts
gallery/src/routes/: +layout.svelte  +page.svelte  +page.ts
gallery/src/routes/about/: +page.svelte  +page.ts
gallery/src/routes/api/artworks/: +server.ts
gallery/src/routes/api/artworks/[id]/: +server.ts
gallery/src/routes/api/queue/: +server.ts
gallery/src/routes/api/submit/: +server.ts
gallery/src/routes/api/system-status/: +server.ts
gallery/src/routes/api/upvote/: +server.ts
gallery/src/routes/artwork/[id]/: +page.svelte  +page.ts
gallery/src/routes/gallery/: +page.svelte  +page.ts
gallery/src/routes/queue/: +page.svelte  +page.ts
gallery/src/routes/submit/: +page.svelte
gallery/static/: site.webmanifest
obs/: claudedraws-obs-scene.json
scripts/: README.md  install_sleep_monitor.ps1  sleep_monitor.ps1  test_workflow.py  wol_monitor.service  wol_monitor.sh
worker/: __init__.py  main.py
workflows/: __init__.py  activities.py  create_artwork.py  deploy_gallery.py  process_artwork.py
